--- a/src/main/resources/view/program-form.fxml
+++ b/src/main/resources/view/program-form.fxml
@@ -2,23 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.ProgramFormController">
    <children>
       <Label layoutX="56.0" layoutY="86.0" text="Program ID" />
       <Label layoutX="56.0" layoutY="113.0" text="Program Name" />
       <Label layoutX="56.0" layoutY="145.0" text="Duration" />
-      <TextField fx:id="txtProgramId" layoutX="136.0" layoutY="82.0" onAction="#txtProgramIdOnAction" />
-      <TextField fx:id="txtDuration" layoutX="136.0" layoutY="141.0" onAction="#txtDurationOnAction" />
-      <TextField fx:id="txtProgramName" layoutX="136.0" layoutY="112.0" onAction="#txtProgramNameOnAction" />
+      <TextField fx:id="txtProgramId" layoutX="136.0" layoutY="82.0" />
+      <TextField fx:id="txtDuration" layoutX="136.0" layoutY="141.0" />
+      <TextField fx:id="txtProgramName" layoutX="136.0" layoutY="112.0" />
       <Label layoutX="56.0" layoutY="173.0" text="Fee" />
-      <TextField fx:id="txt" layoutX="136.0" layoutY="169.0" />
-      <Button layoutX="91.0" layoutY="261.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="55.0" text="Submit" />
-      <Button layoutX="167.0" layoutY="261.0" mnemonicParsing="false" text="Update" />
-      <Button layoutX="248.0" layoutY="261.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="55.0" text="Delete" />
-      <Button layoutX="329.0" layoutY="262.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="55.0" text="Clear" />
+      <TextField fx:id="txtFee" layoutX="136.0" layoutY="169.0" />
+      <Button fx:id="btnSubmit" layoutX="134.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnSubmitOnAction" prefHeight="26.0" prefWidth="55.0" text="Submit" />
+      <Button fx:id="btnUpdate" layoutX="210.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+      <Button fx:id="btnDelete" layoutX="291.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="55.0" text="Delete" />
+      <Button fx:id="btnClear" layoutX="372.0" layoutY="213.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="55.0" text="Clear" />
+      <TableView fx:id="tblProgram" layoutX="134.0" layoutY="247.0" prefHeight="146.0" prefWidth="302.0">
+        <columns>
+          <TableColumn fx:id="colProgramId" prefWidth="75.0" text="ID" />
+          <TableColumn fx:id="colProgramName" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="colDuration" prefWidth="75.0" text="Duration" />
+            <TableColumn fx:id="colFee" prefWidth="75.0" text="Fee" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
