--- a/src/main/resources/view/login-form.fxml
+++ b/src/main/resources/view/login-form.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.LoginFormController">
    <children>
-      <Button fx:id="btnLogin" layoutX="215.0" layoutY="233.0" mnemonicParsing="false" onAction="#btnLoginOnAction" prefHeight="59.0" prefWidth="152.0" text="Login" />
+      <Button fx:id="btnLogin" layoutX="255.0" layoutY="257.0" mnemonicParsing="false" onAction="#btnLoginOnAction" prefHeight="30.0" prefWidth="89.0" text="Login" />
+      <TextField fx:id="txtUsername" layoutX="226.0" layoutY="134.0" />
+      <PasswordField fx:id="txtPassword" layoutX="226.0" layoutY="200.0" />
+      <Label layoutX="143.0" layoutY="138.0" text="USERNAME" />
+      <Label layoutX="143.0" layoutY="204.0" text="PASSWORD" />
    </children>
 </AnchorPane>
