--- a/src/main/resources/view/student-form.fxml
+++ b/src/main/resources/view/student-form.fxml
@@ -3,58 +3,65 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.StudentFormController">
+<AnchorPane prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.StudentFormController">
     <Label layoutX="323.0" layoutY="41.0" text="Student ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-    <TextField fx:id="txtStId" layoutX="424.0" layoutY="37.0" onAction="#txtStIdOnAction" promptText="Enter student ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+    <TextField fx:id="txtStId" layoutX="424.0" layoutY="37.0" promptText="Enter student ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
     <Label layoutX="57.0" layoutY="50.0" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-    <TextField fx:id="txtName" layoutX="148.0" layoutY="46.0" onAction="#txtNameOnAction" promptText="Enter name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <TextField fx:id="txtName" layoutX="148.0" layoutY="46.0" promptText="Enter name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
     <Label layoutX="344.0" layoutY="128.0" text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-    <TextField fx:id="txtAddress" layoutX="437.0" layoutY="133.0" onAction="#txtAddressOnAction" promptText="Enter address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <TextField fx:id="txtAddress" layoutX="437.0" layoutY="133.0" promptText="Enter address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
     <Label layoutX="332.0" layoutY="86.0" text="Date of Birth:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-    <DatePicker fx:id="datePickerDob" layoutX="416.0" layoutY="82.0" onAction="#datePickerDobOnAction" promptText="Select date of birth" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <DatePicker fx:id="datePickerDob" layoutX="416.0" layoutY="82.0" promptText="Select date of birth" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
     <Label layoutX="48.0" layoutY="95.0" text="Contact:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-    <TextField fx:id="txtContact" layoutX="148.0" layoutY="78.0" onAction="#txtContactOnAction" promptText="Enter contact" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <TextField fx:id="txtContact" layoutX="148.0" layoutY="78.0" promptText="Enter contact" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
     <Label layoutX="70.0" layoutY="137.0" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-    <TextField fx:id="txtEmail" layoutX="148.0" layoutY="129.0" onAction="#txtEmailOnAction" promptText="Enter email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+    <TextField fx:id="txtEmail" layoutX="148.0" layoutY="129.0" promptText="Enter email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
     <Label layoutX="65.0" layoutY="178.0" text="Gender:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
 
     <Label layoutX="62.0" layoutY="212.0" text="Advance:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-    <TextField fx:id="txtAdvance" layoutX="148.0" layoutY="204.0" onAction="#txtAdvanceOnAction" promptText="Enter advance" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+    <TextField fx:id="txtAdvance" layoutX="148.0" layoutY="204.0" promptText="Enter advance" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
     <Label layoutX="43.0" layoutY="238.0" text="Registration Date:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-    <DatePicker fx:id="datePickerRegistrationDate" layoutX="148.0" layoutY="234.0" onAction="#datePickerRegistrationDateOnAction" promptText="Select registration date" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+    <DatePicker fx:id="datePickerRegistrationDate" layoutX="148.0" layoutY="234.0" promptText="Select registration date" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
     <Button fx:id="btnSubmit" layoutX="340.0" layoutY="225.0" onAction="#btnSubmitOnAction" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-   <TableView fx:id="tblStudent" layoutX="4.0" layoutY="273.0" prefHeight="98.0" prefWidth="573.0">
-     <columns>
-       <TableColumn fx:id="colId" prefWidth="75.0" text="ID" />
-       <TableColumn fx:id="colName" prefWidth="75.0" text="Name" />
-         <TableColumn fx:id="colAddress" prefWidth="64.79998779296875" text="Address" />
-         <TableColumn fx:id="colContact" prefWidth="64.0" text="Contact" />
-         <TableColumn fx:id="colGender" prefWidth="51.20001220703125" text="Gender" />
-         <TableColumn fx:id="colEmail" prefWidth="65.5999755859375" text="Email" />
-         <TableColumn fx:id="colBirth" prefWidth="57.59991455078125" text="Birth" />
-         <TableColumn fx:id="colDate" prefWidth="52.800018310546875" text="Date" />
-         <TableColumn fx:id="colAdvance" prefWidth="64.80001220703127" text="Advance" />
-     </columns>
-   </TableView>
-   <RadioButton fx:id="radioMale" toggleGroup="$genderGroup" layoutX="160.0" layoutY="178.0" mnemonicParsing="false" onAction="#radioMaleOnAction" text="Male" />
-   <RadioButton fx:id="radioFemale" toggleGroup="$genderGroup" layoutX="223.0" layoutY="178.0" mnemonicParsing="false" onAction="#radioFemaleOnAction" text="Female" />
-   <Button fx:id="btnUpdate" layoutX="398.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-   <Button fx:id="btnDelete" layoutX="460.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
-   <Button fx:id="btnClear" layoutX="522.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
+    <TableView fx:id="tblStudent" layoutX="4.0" layoutY="273.0" prefHeight="98.0" prefWidth="573.0">
+        <columns>
+            <TableColumn fx:id="colId" prefWidth="75.0" text="ID" />
+            <TableColumn fx:id="colName" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="colAddress" prefWidth="64.79998779296875" text="Address" />
+            <TableColumn fx:id="colContact" prefWidth="64.0" text="Contact" />
+            <TableColumn fx:id="colGender" prefWidth="51.20001220703125" text="Gender" />
+            <TableColumn fx:id="colEmail" prefWidth="65.5999755859375" text="Email" />
+            <TableColumn fx:id="colBirth" prefWidth="57.59991455078125" text="Birth" />
+            <TableColumn fx:id="colDate" prefWidth="52.800018310546875" text="Date" />
+            <TableColumn fx:id="colAdvance" prefWidth="64.80001220703127" text="Advance" />
+        </columns>
+    </TableView>
+    <RadioButton fx:id="radioMale" layoutX="160.0" layoutY="178.0" mnemonicParsing="false" text="Male">
+        <toggleGroup>
+            <ToggleGroup fx:id="genderGroup" />
+        </toggleGroup></RadioButton>
+    <RadioButton fx:id="radioFemale" layoutX="223.0" layoutY="178.0" mnemonicParsing="false" text="Female" toggleGroup="$genderGroup" />
+    <Button fx:id="btnUpdate" layoutX="398.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+    <Button fx:id="btnDelete" layoutX="460.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
+    <Button fx:id="btnClear" layoutX="522.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
+    <ListView fx:id="lsProgram" layoutX="599.0" layoutY="92.0" prefHeight="186.0" prefWidth="188.0" />
+    <Label fx:id="lblCoursers" layoutX="599.0" layoutY="293.0" prefHeight="18.0" prefWidth="108.0" text="coursers" />
 
 </AnchorPane>
