--- a/src/main/resources/view/login-form.fxml
+++ b/src/main/resources/view/login-form.fxml
@@ -11,7 +11,12 @@
       <Button fx:id="btnLogin" layoutX="255.0" layoutY="257.0" mnemonicParsing="false" onAction="#btnLoginOnAction" prefHeight="30.0" prefWidth="89.0" text="Login" />
       <TextField fx:id="txtUsername" layoutX="226.0" layoutY="134.0" />
       <PasswordField fx:id="txtPassword" layoutX="226.0" layoutY="200.0" />
+      <TextField fx:id="txtPasswordVisible" layoutX="188.0" layoutY="200.0" prefHeight="36.0" prefWidth="222.0" promptText="enter your password here" visible="false" />
+
+      <Button fx:id="btnTogglePassword" layoutX="379.0" layoutY="200.0" onAction="#togglePasswordVisibility" prefHeight="18.0" prefWidth="46.0" style="-fx-text-fill: black; -fx-background-color: white;" text="Show" />
+
       <Label layoutX="143.0" layoutY="138.0" text="USERNAME" />
       <Label layoutX="143.0" layoutY="204.0" text="PASSWORD" />
+
    </children>
 </AnchorPane>
