--- a/src/main/resources/view/program-form.fxml
+++ b/src/main/resources/view/program-form.fxml
@@ -6,27 +6,33 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.ProgramFormController">
+<AnchorPane prefHeight="786.0" prefWidth="618.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.ProgramFormController">
    <children>
-      <Label layoutX="56.0" layoutY="86.0" text="Program ID" />
-      <Label layoutX="56.0" layoutY="113.0" text="Program Name" />
-      <Label layoutX="56.0" layoutY="145.0" text="Duration" />
-      <TextField fx:id="txtProgramId" layoutX="136.0" layoutY="82.0" />
-      <TextField fx:id="txtDuration" layoutX="136.0" layoutY="141.0" />
-      <TextField fx:id="txtProgramName" layoutX="136.0" layoutY="112.0" />
-      <Label layoutX="56.0" layoutY="173.0" text="Fee" />
-      <TextField fx:id="txtFee" layoutX="136.0" layoutY="169.0" />
-      <Button fx:id="btnSubmit" layoutX="134.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnSubmitOnAction" prefHeight="26.0" prefWidth="55.0" text="Submit" />
-      <Button fx:id="btnUpdate" layoutX="210.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-      <Button fx:id="btnDelete" layoutX="291.0" layoutY="212.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="55.0" text="Delete" />
-      <Button fx:id="btnClear" layoutX="372.0" layoutY="213.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="55.0" text="Clear" />
-      <TableView fx:id="tblProgram" layoutX="134.0" layoutY="247.0" prefHeight="146.0" prefWidth="302.0">
+      <Label layoutX="86.0" layoutY="145.0" text="Program ID" />
+      <Label layoutX="86.0" layoutY="195.0" text="Program Name" />
+      <Label layoutX="88.0" layoutY="240.0" text="Duration" />
+      <TextField fx:id="txtProgramId" layoutX="188.0" layoutY="141.0" />
+      <TextField fx:id="txtDuration" layoutX="188.0" layoutY="236.0" />
+      <TextField fx:id="txtProgramName" layoutX="188.0" layoutY="191.0" />
+      <Label layoutX="92.0" layoutY="290.0" text="Fee" />
+      <TextField fx:id="txtFee" layoutX="188.0" layoutY="286.0" />
+      <Button fx:id="btnSubmit" layoutX="155.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnSubmitOnAction" prefHeight="26.0" prefWidth="55.0" text="Submit" />
+      <Button fx:id="btnUpdate" layoutX="235.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+      <Button fx:id="btnDelete" layoutX="309.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="55.0" text="Delete" />
+      <Button fx:id="btnClear" layoutX="386.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="55.0" text="Clear" />
+       <Label layoutX="195.0" layoutY="52.0" text="PROGRAM DETAILS">
+           <font>
+               <Font name="System Bold Italic" size="26.0" />
+           </font>
+       </Label>
+       <TableView fx:id="tblProgram" layoutX="76.0" layoutY="393.0" prefHeight="247.0" prefWidth="490.0">
         <columns>
           <TableColumn fx:id="colProgramId" prefWidth="75.0" text="ID" />
-          <TableColumn fx:id="colProgramName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="colDuration" prefWidth="75.0" text="Duration" />
-            <TableColumn fx:id="colFee" prefWidth="75.0" text="Fee" />
+          <TableColumn fx:id="colProgramName" prefWidth="143.99993896484375" text="Name" />
+            <TableColumn fx:id="colDuration" prefWidth="134.4000244140625" text="Duration" />
+            <TableColumn fx:id="colFee" prefWidth="135.99996948242188" text="Fee" />
         </columns>
       </TableView>
    </children>
