--- a/src/main/resources/view/student-form.fxml
+++ b/src/main/resources/view/student-form.fxml
@@ -11,57 +11,63 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.StudentFormController">
-    <Label layoutX="323.0" layoutY="41.0" text="Student ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-    <TextField fx:id="txtStId" layoutX="424.0" layoutY="37.0" promptText="Enter student ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+<AnchorPane prefHeight="786.0" prefWidth="618.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.StudentFormController">
+    <Label layoutX="218.0" layoutY="52.0" text="STUDENT REGISTRATION">
+        <font>
+            <Font name="System Bold Italic" size="26.0" />
+        </font>
+    </Label>
+    <Label layoutX="56.0" layoutY="137.0" text="Student ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField fx:id="txtStId" layoutX="136.0" layoutY="133.0" promptText="Enter student ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-    <Label layoutX="57.0" layoutY="50.0" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-    <TextField fx:id="txtName" layoutX="148.0" layoutY="46.0" promptText="Enter name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Label layoutX="68.0" layoutY="181.0" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <TextField fx:id="txtName" layoutX="136.0" layoutY="177.0" promptText="Enter name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-    <Label layoutX="344.0" layoutY="128.0" text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-    <TextField fx:id="txtAddress" layoutX="437.0" layoutY="133.0" promptText="Enter address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Label layoutX="63.0" layoutY="375.0" text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <TextField fx:id="txtAddress" layoutX="136.0" layoutY="371.0" promptText="Enter address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-    <Label layoutX="332.0" layoutY="86.0" text="Date of Birth:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-    <DatePicker fx:id="datePickerDob" layoutX="416.0" layoutY="82.0" promptText="Select date of birth" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Label layoutX="56.0" layoutY="417.0" text="Date of Birth:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+    <DatePicker fx:id="datePickerDob" layoutX="136.0" layoutY="413.0" prefHeight="26.0" prefWidth="150.0" promptText="Select date of birth" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-    <Label layoutX="48.0" layoutY="95.0" text="Contact:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-    <TextField fx:id="txtContact" layoutX="148.0" layoutY="78.0" promptText="Enter contact" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <Label layoutX="64.0" layoutY="231.0" text="Contact:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+    <TextField fx:id="txtContact" layoutX="136.0" layoutY="227.0" promptText="Enter contact" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-    <Label layoutX="70.0" layoutY="137.0" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-    <TextField fx:id="txtEmail" layoutX="148.0" layoutY="129.0" promptText="Enter email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+    <Label layoutX="70.0" layoutY="280.0" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+    <TextField fx:id="txtEmail" layoutX="136.0" layoutY="276.0" promptText="Enter email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-    <Label layoutX="65.0" layoutY="178.0" text="Gender:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+    <Label layoutX="65.0" layoutY="329.0" text="Gender:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
 
-    <Label layoutX="62.0" layoutY="212.0" text="Advance:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-    <TextField fx:id="txtAdvance" layoutX="148.0" layoutY="204.0" promptText="Enter advance" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+    <Label layoutX="359.0" layoutY="231.0" text="Advance:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+    <TextField fx:id="txtAdvance" layoutX="454.0" layoutY="227.0" promptText="Enter advance" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-    <Label layoutX="43.0" layoutY="238.0" text="Registration Date:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-    <DatePicker fx:id="datePickerRegistrationDate" layoutX="148.0" layoutY="234.0" promptText="Select registration date" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+    <Label layoutX="350.0" layoutY="181.0" text="Registration Date:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+    <DatePicker fx:id="datePickerRegistrationDate" layoutX="454.0" layoutY="177.0" prefHeight="26.0" prefWidth="150.0" promptText="Select registration date" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
-    <Button fx:id="btnSubmit" layoutX="340.0" layoutY="225.0" onAction="#btnSubmitOnAction" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-    <TableView fx:id="tblStudent" layoutX="4.0" layoutY="273.0" prefHeight="98.0" prefWidth="573.0">
+    <Button fx:id="btnSubmit" layoutX="677.0" layoutY="289.0" onAction="#btnSubmitOnAction" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+    <TableView fx:id="tblStudent" layoutX="50.0" layoutY="463.0" prefHeight="214.0" prefWidth="716.0">
         <columns>
-            <TableColumn fx:id="colId" prefWidth="75.0" text="ID" />
-            <TableColumn fx:id="colName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="colAddress" prefWidth="64.79998779296875" text="Address" />
-            <TableColumn fx:id="colContact" prefWidth="64.0" text="Contact" />
-            <TableColumn fx:id="colGender" prefWidth="51.20001220703125" text="Gender" />
-            <TableColumn fx:id="colEmail" prefWidth="65.5999755859375" text="Email" />
-            <TableColumn fx:id="colBirth" prefWidth="57.59991455078125" text="Birth" />
-            <TableColumn fx:id="colDate" prefWidth="52.800018310546875" text="Date" />
-            <TableColumn fx:id="colAdvance" prefWidth="64.80001220703127" text="Advance" />
+            <TableColumn fx:id="colId" prefWidth="47.199981689453125" text="ID" />
+            <TableColumn fx:id="colName" prefWidth="87.9999771118164" text="Name" />
+            <TableColumn fx:id="colAddress" prefWidth="80.00006103515625" text="Address" />
+            <TableColumn fx:id="colContact" prefWidth="80.79998779296875" text="Contact" />
+            <TableColumn fx:id="colGender" prefWidth="57.5999755859375" text="Gender" />
+            <TableColumn fx:id="colEmail" prefWidth="88.0" text="Email" />
+            <TableColumn fx:id="colBirth" prefWidth="86.39999389648438" text="Birth" />
+            <TableColumn fx:id="colDate" prefWidth="92.0" text="Date" />
+            <TableColumn fx:id="colAdvance" prefWidth="99.199951171875" text="Advance" />
         </columns>
     </TableView>
-    <RadioButton fx:id="radioMale" layoutX="160.0" layoutY="178.0" mnemonicParsing="false" text="Male">
+    <RadioButton fx:id="radioMale" layoutX="136.0" layoutY="329.0" mnemonicParsing="false" text="Male">
         <toggleGroup>
             <ToggleGroup fx:id="genderGroup" />
         </toggleGroup></RadioButton>
-    <RadioButton fx:id="radioFemale" layoutX="223.0" layoutY="178.0" mnemonicParsing="false" text="Female" toggleGroup="$genderGroup" />
-    <Button fx:id="btnUpdate" layoutX="398.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
-    <Button fx:id="btnDelete" layoutX="460.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Delete" />
-    <Button fx:id="btnClear" layoutX="522.0" layoutY="225.0" mnemonicParsing="false" onAction="#btnClearOnAction" text="Clear" />
-    <ListView fx:id="lsProgram" layoutX="599.0" layoutY="92.0" prefHeight="186.0" prefWidth="188.0" />
-    <Label fx:id="lblCoursers" layoutX="599.0" layoutY="293.0" prefHeight="18.0" prefWidth="108.0" text="coursers" />
+    <RadioButton fx:id="radioFemale" layoutX="214.0" layoutY="329.0" mnemonicParsing="false" text="Female" toggleGroup="$genderGroup" />
+    <Button fx:id="btnUpdate" layoutX="676.0" layoutY="325.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" />
+    <Button fx:id="btnDelete" layoutX="678.0" layoutY="360.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="55.0" text="Delete" />
+    <Button fx:id="btnClear" layoutX="679.0" layoutY="400.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="54.0" text="Clear" />
+    <ListView fx:id="lsProgram" layoutX="454.0" layoutY="275.0" prefHeight="147.0" prefWidth="150.0" />
+    <Label fx:id="lblCoursers" layoutX="353.0" layoutY="279.0" prefHeight="18.0" prefWidth="60.0" text="coursers" />
 
 </AnchorPane>
