--- a/src/main/resources/view/user-form.fxml
+++ b/src/main/resources/view/user-form.fxml
@@ -9,42 +9,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.UserFormController">
+<AnchorPane prefHeight="786.0" prefWidth="618.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.orm.controller.UserFormController">
 
-    <!-- Input Fields -->
     <VBox layoutX="20.0" layoutY="20.0" spacing="10.0">
-        <HBox spacing="10">
-            <Label text="User ID:" />
-            <TextField fx:id="txtUserId" prefWidth="200" />
-        </HBox>
+        <HBox spacing="10" />
 
-        <HBox spacing="10">
-            <Label text="Username:" />
-            <TextField fx:id="txtUsername" prefWidth="200" />
-        </HBox>
-
-        <HBox spacing="10">
-            <Label text="Password:" />
-            <PasswordField fx:id="txtPassword" prefWidth="200" />
-        </HBox>
-
-        <HBox spacing="10">
-            <Label text="Possession:" />
-            <TextField fx:id="txtPossession" prefWidth="200" />
-        </HBox>
-
-        <!-- Buttons -->
-        <HBox spacing="10">
-            <Button fx:id="btnSubmit" onAction="#btnSubmitOnAction" text="Submit" />
-            <Button fx:id="btnUpdate" onAction="#btnUpdateOnAction" text="Update" />
-            <Button fx:id="btnDelete" onAction="#btnDeleteOnAction" text="Delete" />
-            <Button fx:id="btnClear" onAction="#btnClearOnAction" text="Clear" />
-        </HBox>
+        <HBox spacing="10" />
     </VBox>
 
     <!-- TableView for displaying user data -->
-    <TableView fx:id="userTable" layoutX="46.0" layoutY="196.0" prefHeight="170.0" prefWidth="518.0">
+    <TableView fx:id="userTable" layoutX="50.0" layoutY="393.0" prefHeight="170.0" prefWidth="518.0">
         <columns>
             <TableColumn fx:id="colId" prefWidth="100.0" text="User ID" />
             <TableColumn fx:id="colUsername" prefWidth="120.00006103515625" text="Username" />
@@ -52,5 +28,32 @@
          <TableColumn fx:id="colPossesion" prefWidth="172.00006103515625" text="Possesion" />
         </columns>
     </TableView>
+      <Button fx:id="btnClear" layoutX="321.0" layoutY="346.0" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="60.0" text="Clear" />
+
+     <!-- Buttons -->
+     <HBox layoutX="122.0" layoutY="347.0" spacing="10">
+         <Button fx:id="btnSubmit" onAction="#btnSubmitOnAction" text="Submit" />
+         <Button fx:id="btnUpdate" onAction="#btnUpdateOnAction" text="Update" />
+         <Button fx:id="btnDelete" onAction="#btnDeleteOnAction" text="Delete" />
+     </HBox>
+
+     <HBox layoutX="93.0" layoutY="255.0" spacing="10">
+         <Label text="Password:" />
+         <PasswordField fx:id="txtPassword" prefHeight="26.0" prefWidth="198.0" />
+     </HBox>
+
+     <HBox layoutX="93.0" layoutY="291.0" spacing="10">
+         <Label text="Possession:" />
+         <TextField fx:id="txtPossession" prefHeight="26.0" prefWidth="180.0" />
+     </HBox>
+      <TextField fx:id="txtUsername" layoutX="172.0" layoutY="205.0" prefHeight="26.0" prefWidth="180.0" />
+      <TextField fx:id="txtUserId" layoutX="172.0" layoutY="163.0" prefHeight="26.0" prefWidth="180.0" />
+      <Label layoutX="82.0" layoutY="164.0" text="User ID:" />
+      <Label layoutX="88.0" layoutY="208.0" text="Username:" />
+   <Label layoutX="229.0" layoutY="43.0" text="USER DETAILS">
+      <font>
+         <Font name="System Bold Italic" size="24.0" />
+      </font>
+   </Label>
 
 </AnchorPane>
